# jobs

./: .env.example  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml
browser/: Dockerfile  start-chromium.sh  start-tinyproxy.sh  supervisord.conf
skills/: README.md
skills/create-telemost/: SKILL.md
skills/schedule-meeting/: SKILL.md
src/: anthropic_models.py  api.py  config.py  credentials.py  heartbeat.py  main.py  media.py  prompts.py  session.py  setup.py  updater.py
src/claude/: runner.py
src/mcp_manager/: tools.py
src/memory/: __init__.py  index.py  storage.py  tools.py
src/migrations/: __init__.py  m001_triggers_to_separate_db.py  m002_usage_events.py  m003_usage_events_model.py  m004_tasks_recipients.py  m005_triggers_recipients.py  m006_tasks_model.py  runner.py
src/plugin_manager/: tools.py
src/scheduler/: runner.py  store.py  tools.py
src/skill_manager/: storage.py  tools.py
src/telegram/: auth.py  bot_transport.py  client.py  gate.py  group_log.py  handlers.py  telethon_transport.py  tools.py  transport.py
src/tools/: CLAUDE.md  __init__.py  scheduler.py
src/triggers/: __init__.py  executor.py  manager.py  models.py  storage.py  tools.py
src/triggers/sources/: tg_channel.py
src/users/: __init__.py  models.py  prompts.py  repository.py  sdk_compat.py  session_manager.py  tools.py
