[project]
name = "jobs"
version = "0.1.0"
description = "Personal AI assistant with Claude Code + Telegram"
requires-python = ">=3.11"
dependencies = [
    "telethon>=1.36.0",
    "pydantic-settings>=2.0.0",
    "aiosqlite>=0.19.0",
    "apscheduler>=3.10.0",
    "loguru>=0.7.0",
    "claude-agent-sdk>=0.1.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "sqlite-vec>=0.1.0",
    "aiogram>=3.0",
    "aiohttp>=3.9.0",
    "qrcode>=7.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
